# ENVIPE-COLMEX

./: README.md  encig.ipynb  pyproject.toml  tabuladorpercepcion.ipynb  transform.py
ENVIPE/: gastoseguridad.ipynb
