[project]
name = "colmex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbfread>=2.0.7",
    "ipykernel>=6.30.0",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "tqdm>=4.67.1",
]
